--- a/excerciseflut/pubspec.yaml
+++ b/excerciseflut/pubspec.yaml
@@ -58,7 +58,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-  - assets/images/ardan.jpg
+  - assets/images/ui_login.svg
   - assets/images/ui_login.png
 
 
